[package]
name = "project_t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
env_logger = "0.10.0"
flamegraph = "0.6.3"
futures = "0.3.28"
log = "0.4.20"
petgraph = "0.6.3"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
spin_sleep = "1.1.1"
tokio = { version = "1.29.1", features = ["full", "sync","rt-multi-thread"] }

[features]
logging = []